WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110788
[chromium] Fix continuous painting mode
https://bugs.webkit.org/show_bug.cgi?id=110788
Summary
[chromium] Fix continuous painting mode
James Robinson
Reported
2013-02-25 13:15:37 PST
[chromium] Fix continuous painting mode
Attachments
Patch
(3.57 KB, patch)
2013-02-25 13:17 PST
,
James Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2013-02-25 13:17:44 PST
Created
attachment 190114
[details]
Patch
James Robinson
Comment 2
2013-02-25 13:18:48 PST
This works for me, mind verifying it Eberhard?
egraether
Comment 3
2013-02-25 14:38:47 PST
I tested it on my system and it works without any problems. Thank you!
Adrienne Walker
Comment 4
2013-02-25 16:08:58 PST
Comment on
attachment 190114
[details]
Patch R=me.
WebKit Review Bot
Comment 5
2013-02-26 00:36:44 PST
Comment on
attachment 190114
[details]
Patch Clearing flags on attachment: 190114 Committed
r144017
: <
http://trac.webkit.org/changeset/144017
>
WebKit Review Bot
Comment 6
2013-02-26 00:36:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug